add ut on handler and repository
